Fixed font colors for legibility. Closes #1.

--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,6 @@ div.humanBeing {
     padding: 10px;
     float: left;
     margin: 15px;
-    color: #FFF;
 }
 
 div.humanBeing h2, div.humanBeing h3 {
